# EchoStack

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: agent.py  analytics_job.py  auth.py  config.py  db.py  main.py  websocket.py  worker.py
frontend/: index.html
frontend/public/: audio-processor.js
frontend/src/: App.css  App.jsx  index.css
postgres/: init.sql
reference/: architecture.md  commands.md  flow.md  logic.md
